// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dialog Medium 1`] = `
<button
  aria-disabled={false}
  className="button button-primary pill-shape"
  defaultChecked={false}
  disabled={false}
  onClick={[Function]}
>
  <span
    className=""
  >
    Open dialog
  </span>
</button>
`;

exports[`Storyshots Dialog Small 1`] = `
<button
  aria-disabled={false}
  className="button button-primary button-primary-disruptive pill-shape"
  defaultChecked={false}
  disabled={false}
  onClick={[Function]}
>
  <span
    className=""
  >
    Open dialog
  </span>
</button>
`;
